# kraken-rs

./: Cargo.toml  README.md
src/: consts.rs  lib.rs
src/client/: kraken.rs  mod.rs  path.rs
src/de/: float.rs  mod.rs
src/types/: asset.rs  asset_pair.rs  candle.rs  interval.rs  mod.rs  order.rs  orders.rs  response.rs  spread.rs  ticker_pair.rs  time.rs  trade.rs  trade_side.rs  trade_type.rs
