[package]
name = "kraken"
version = "0.1.0"
authors = ["l1h3r <devin.turner09@gmail.com>"]
edition = "2018"

[dependencies.reqwest]
features = ["json"]
version = "0.10.0-alpha.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.102"

[dependencies.serde_json]
version = "1.0.41"

[dependencies.tokio]
version = "0.2.0-alpha.6"
